force-app/main/default/objects/Contrato__c/fields/Arquivo_Final_Id__c.field-meta.xml
<CustomField>
    <fullName>Arquivo_Final_Id__c</fullName>
    <description>ContentDocumentId da versÃƒÆ’Ã‚Â£o final do PDF gerado para este contrato.</description>
    <label>Arquivo Final Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>