force-app/main/default/objects/Contrato__c/fields/Contratante_CEP__c.field-meta.xml
<CustomField>
    <fullName>Contratante_CEP__c</fullName>
    <description>CEP do contratante no contrato.</description>
    <label>Contratante CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>