force-app/main/default/objects/Contrato__c/fields/Contratante_Cidade__c.field-meta.xml
<CustomField>
    <fullName>Contratante_Cidade__c</fullName>
    <description>Cidade do contratante no contrato.</description>
    <label>Contratante Cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>