force-app/main/default/objects/Contrato__c/fields/Contratante_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Contratante_CNPJ__c</fullName>
    <description>CNPJ do contratante no momento da negociaÃƒÆ’Ã‚Â§ÃƒÆ’Ã‚Â£o.</description>
    <label>Contratante CNPJ</label>
    <length>40</length>
    <type>Text</type>
</CustomField>