force-app/main/default/objects/Contrato__c/fields/Contratante_Email__c.field-meta.xml
<CustomField>
    <fullName>Contratante_Email__c</fullName>
    <description>Email principal do contratante para o contrato.</description>
    <label>Contratante Email</label>
    <type>Email</type>
</CustomField>