force-app/main/default/objects/Contrato__c/fields/Contratante_Endereco_Completo__c.field-meta.xml
<CustomField>
  <fullName>Contratante_Endereco_Completo__c</fullName>
  <description>EndereÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§o completo do contratante para o contrato.</description>
  <label>Contratante Endereço Completo</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>