force-app/main/default/objects/Contrato__c/fields/Contratante_Estado__c.field-meta.xml
<CustomField>
    <fullName>Contratante_Estado__c</fullName>
    <description>Estado/UF do contratante no contrato.</description>
    <label>Contratante Estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>