force-app/main/default/objects/Contrato__c/fields/Contratante_Razao_Social__c.field-meta.xml
<CustomField>
  <fullName>Contratante_Razao_Social__c</fullName>
  <description>RazÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o social do contratante no momento da negociaÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o.</description>
  <label>Contratante Razão Social</label>
  <length>255</length>
  <type>Text</type>
</CustomField>