force-app/main/default/objects/Contrato__c/fields/Contratante_Telefone__c.field-meta.xml
<CustomField>
    <fullName>Contratante_Telefone__c</fullName>
    <description>Telefone principal do contratante para o contrato.</description>
    <label>Contratante Telefone</label>
    <type>Phone</type>
</CustomField>