force-app/main/default/objects/Contrato__c/fields/Contrato_Padrao__c.field-meta.xml
<CustomField>
  <fullName>Contrato_Padrao__c</fullName>
  <description>Modelo padrÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o utilizado como base para este contrato.</description>
  <label>Contrato Padrão</label>
  <referenceTo>Contrato_Padrao__c</referenceTo>
  <relationshipName>Contrato_Padrao</relationshipName>
  <type>Lookup</type>
</CustomField>