force-app/main/default/objects/Contrato__c/fields/Data_Base__c.field-meta.xml
<CustomField>
    <fullName>Data_Base__c</fullName>
    <description>Data-base utilizada para o contrato.</description>
    <label>Data Base</label>
    <type>Date</type>
</CustomField>