force-app/main/default/objects/Contrato__c/fields/Data_Geracao_Final__c.field-meta.xml
<CustomField>
  <fullName>Data_Geracao_Final__c</fullName>
  <description>Data e hora da ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âºltima geraÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de versÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o final do contrato.</description>
  <label>Data de Geração Final</label>
  <type>DateTime</type>
</CustomField>