force-app/main/default/objects/Contrato__c/fields/Descricao_Componente_2__c.field-meta.xml
<CustomField>
  <fullName>Descricao_Componente_2__c</fullName>
  <description>DescriÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o do segundo componente de valor contratual (quando aplicÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¡vel).</description>
  <label>Descrição Componente 2</label>
  <length>255</length>
  <type>Text</type>
</CustomField>