force-app/main/default/objects/Contrato__c/fields/Descricao_Obra__c.field-meta.xml
<CustomField>
  <fullName>Descricao_Obra__c</fullName>
  <description>DescriÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o da obra relacionada ao contrato.</description>
  <label>Descrição da Obra</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>