force-app/main/default/objects/Contrato__c/fields/Indice_Correcao_Monetaria__c.field-meta.xml
<CustomField>
    <fullName>Indice_Correcao_Monetaria__c</fullName>
    <description>Indice de correcao monetaria do contrato.</description>
    <label>Indice de Correcao</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPCA/IBGE</fullName>
                <default>true</default>
                <label>IPCA/IBGE</label>
            </value>
            <value>
                <fullName>IGP-M</fullName>
            </value>
            <value>
                <fullName>INCC</fullName>
            </value>
            <value>
                <fullName>Sem Correcao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>