force-app/main/default/objects/Contrato__c/fields/Inicializado__c.field-meta.xml
<CustomField>
    <fullName>Inicializado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o contrato jÃƒÆ’Ã‚Â¡ foi inicializado a partir do modelo padrÃƒÆ’Ã‚Â£o.</description>
    <label>Inicializado</label>
    <type>Checkbox</type>
</CustomField>