force-app/main/default/objects/Contrato__c/fields/Local_Obra__c.field-meta.xml
<CustomField>
    <fullName>Local_Obra__c</fullName>
    <description>Local da obra para execuÃƒÆ’Ã‚Â§ÃƒÆ’Ã‚Â£o dos serviÃƒÆ’Ã‚Â§os contratados.</description>
    <label>Local da Obra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>