force-app/main/default/objects/Contrato__c/fields/Modalidade_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Modalidade_Contrato__c</fullName>
    <description>Modalidade comercial do contrato.</description>
    <label>Modalidade do Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
            <value>
                <fullName>PreÃƒÆ’Ã‚Â§o Global</fullName>
            </value>
            <value>
                <fullName>Por Hora TÃƒÆ’Ã‚Â©cnica</fullName>
            </value>
            <value>
                <fullName>Escopo + Sucesso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>