force-app/main/default/objects/Contrato__c/fields/Municipio_Obra__c.field-meta.xml
<CustomField>
    <fullName>Municipio_Obra__c</fullName>
    <description>Municipio da obra usado em clausulas dinamicas.</description>
    <label>Municipio da Obra</label>
    <length>120</length>
    <type>Text</type>
</CustomField>