force-app/main/default/objects/Contrato__c/fields/Numero_Contrato_Externo__c.field-meta.xml
<CustomField>
  <fullName>Numero_Contrato_Externo__c</fullName>
  <description>NÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âºmero externo/gerencial do contrato.</description>
  <label>Número do Contrato Externo</label>
  <length>100</length>
  <type>Text</type>
</CustomField>