force-app/main/default/objects/Contrato__c/fields/Numero_Proposta__c.field-meta.xml
<CustomField>
  <fullName>Numero_Proposta__c</fullName>
  <description>NÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âºmero da proposta associada ao contrato.</description>
  <label>Número da Proposta</label>
  <length>100</length>
  <type>Text</type>
</CustomField>