force-app/main/default/objects/Contrato__c/fields/Objeto_Servicos__c.field-meta.xml
<CustomField>
  <fullName>Objeto_Servicos__c</fullName>
  <description>DescriÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o do objeto dos serviÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§os contratados.</description>
  <label>Objeto dos Serviços</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>