force-app/main/default/objects/Contrato__c/fields/Observacoes_Contrato__c.field-meta.xml
<CustomField>
  <fullName>Observacoes_Contrato__c</fullName>
  <description>ObservaÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âµes gerais para customizaÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o do contrato.</description>
  <label>Observações do Contrato</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>