force-app/main/default/objects/Contrato__c/fields/Prazo_Minimo_Pleito_Dias__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Minimo_Pleito_Dias__c</fullName>
    <description>Prazo minimo em dias para elaboracao de pleito.</description>
    <label>Prazo Minimo Pleito (dias)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>