force-app/main/default/objects/Contrato__c/fields/Prazo_Pagamento_Dias__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Pagamento_Dias__c</fullName>
    <description>Prazo em dias para pagamento da nota fiscal nos contratos.</description>
    <label>Prazo Pagamento (dias)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>