force-app/main/default/objects/Contrato__c/fields/Prazo_Parecer_Dias__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Parecer_Dias__c</fullName>
    <description>Prazo em dias para entrega do parecer tecnico.</description>
    <label>Prazo Parecer (dias)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>