force-app/main/default/objects/Contrato__c/fields/Prazo_Vigencia_Descricao__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Vigencia_Descricao__c</fullName>
    <description>Descricao textual do prazo de vigencia contratual.</description>
    <label>Prazo Vigencia (Desc.)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>