force-app/main/default/objects/Contrato__c/fields/Representante_Legal_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal_Cargo__c</fullName>
    <description>Cargo do representante legal do contratante.</description>
    <label>Representante Legal Cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>