force-app/main/default/objects/Contrato__c/fields/Representante_Legal_CPF__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal_CPF__c</fullName>
    <description>CPF do representante legal do contratante.</description>
    <label>Representante Legal CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>