force-app/main/default/objects/Contrato__c/fields/Representante_Legal_Nome__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal_Nome__c</fullName>
    <description>Nome do representante legal do contratante.</description>
    <label>Representante Legal Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>