force-app/main/default/objects/Contrato__c/fields/Tipo_Contrato__c.field-meta.xml
<CustomField>
  <fullName>Tipo_Contrato__c</fullName>
  <description>Tipo de contrato selecionado para renderizacao do PDF.</description>
  <label>Tipo de Contrato</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Monitoramento Remoto</fullName>
      </value>
      <value>
        <fullName>AssistÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âªncia TÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©cnica Judicial</fullName>
        <label>Assistência Técnica em Processo Judicial</label>
      </value>
      <value>
        <fullName>ElaboraÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de Parecer</fullName>
        <label>Elaboração de Parecer</label>
      </value>
      <value>
        <fullName>DiagnÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â³stico de Contrato</fullName>
        <label>Diagnóstico de Contrato</label>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>