force-app/main/default/objects/Contrato__c/fields/Valor_Componente_2__c.field-meta.xml
<CustomField>
    <fullName>Valor_Componente_2__c</fullName>
    <description>Valor do segundo componente contratual (quando aplicÃƒÆ’Ã‚Â¡vel).</description>
    <label>Valor Componente 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>