force-app/main/default/objects/Contrato__c/fields/Valor_Mensal_Monitoramento__c.field-meta.xml
<CustomField>
    <fullName>Valor_Mensal_Monitoramento__c</fullName>
    <description>Valor mensal contratual para monitoramento remoto no contrato.</description>
    <label>Valor Mensal Monitoramento</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>