force-app/main/default/objects/Contrato__c/fields/Valor_Total_Servico__c.field-meta.xml
<CustomField>
  <fullName>Valor_Total_Servico__c</fullName>
  <description>Valor total principal do contrato.</description>
  <label>Valor Total do Serviço</label>
  <precision>16</precision>
  <scale>2</scale>
  <type>Currency</type>
</CustomField>