force-app/main/default/objects/Contrato__c/fields/Versao_Documento__c.field-meta.xml
<CustomField>
  <fullName>Versao_Documento__c</fullName>
  <defaultValue>0</defaultValue>
  <description>Controle de versÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o do PDF final gerado para o contrato.</description>
  <label>Versão do Documento</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>