force-app/main/default/objects/Contrato__c/recordTypes/Assistencia_Tecnica_Judicial.recordType-meta.xml
<RecordType>
  <fullName>Assistencia_Tecnica_Judicial</fullName>
  <active>true</active>
  <description>Layout e visualizacao para contratos de assistencia tecnica judicial.</description>
  <label>Assistencia Tecnica Judicial</label>
</RecordType>