force-app/main/default/objects/Contrato__c/recordTypes/Diagnostico_de_Contrato.recordType-meta.xml
<RecordType>
  <fullName>Diagnostico_de_Contrato</fullName>
  <active>true</active>
  <description>Layout e visualizacao para contratos de diagnostico de contrato e pleito.</description>
  <label>Diagnostico de Contrato</label>
</RecordType>