force-app/main/default/objects/Contrato__c/recordTypes/Elaboracao_de_Parecer.recordType-meta.xml
<RecordType>
  <fullName>Elaboracao_de_Parecer</fullName>
  <active>true</active>
  <description>Layout e visualizacao para contratos de elaboracao de parecer tecnico.</description>
  <label>Elaboracao de Parecer</label>
</RecordType>