force-app/main/default/objects/Contrato__c/recordTypes/Monitoramento_Remoto.recordType-meta.xml
<RecordType>
  <fullName>Monitoramento_Remoto</fullName>
  <active>true</active>
  <description>Layout e visualizacao para contratos de monitoramento remoto.</description>
  <label>Monitoramento Remoto</label>
</RecordType>